--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ environment:
 dependencies:
   cloud_firestore: ^3.5.0
   cupertino_icons: ^1.0.2
+  email_validator: ^2.1.17
   flutter:
     sdk: flutter
   google_fonts: ^3.0.1
