--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
     sdk: flutter
   flutter_svg: ^1.1.5
   google_fonts: ^3.0.1
+  google_sign_in: ^5.4.2
 
 dev_dependencies:
   flutter_lints: ^2.0.0
